src/pages/fr/v1.23.0/configuration/sso.mdx
---
title: "SSO"
metaTitle: "SSO"
metaDescription: "Comment configurer l'authentification unique (SSO) via SAML2."
---
import ORDynamicCode from '../../../../components/Code/ORDynamicCode';
export const initialValues = {domain: "YOUR_DOMAIN", tenantId: "TENANT_ID", tenantKey: "TENANT_KEY", port: "PORT"};
export const ignoreValues = {jumpcloud: "https://sso.jumpcloud.com"};

L'authentification unique (via SAML2) est disponible uniquement dans l'Enterprise Edition d'OpenReplay.

## Configuration du fournisseur d'identité (IDP)

Dans le tableau de bord de votre fournisseur d'identité, créez une nouvelle application appelée `openreplay` (vous pouvez utiliser cette <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">icône</a>). Sur la page de configuration, veillez à définir la valeur suivante (veillez à remplacer <code>{initialValues.domain}</code> par la valeur correcte, par exemple `https://openreplay.mycompany.com`) :

| Variable | Valeur |
|----------|-------------|
| ACS URL (également appelée Single Sign On URL ou Consumer URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code> |
| Entity ID (également appelé Audience) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code> |
| Single Logout URL (également appelée SLO URL) | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code> (facultatif) |
| Name ID (parfois configurable dans la section 'Attribute Statements' ou 'Parameters') | `Email` ou `EmailAddress` ou `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`, selon votre fournisseur d'identité |
| SAML initiator | Définissez-le sur `Service Provider` (facultatif) |

Dans la section 'Attribute Statements' ou 'Parameters', veillez à définir les champs suivants :

| Champ | Valeur |
|----------|-------------|
| tenantKey | <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> sa valeur se trouve dans le Dashboard, sous 'Preferences' > 'Account' (cet attribut ne doit pas être ajouté si vous utilisez notre plan Cloud Dedicated) |
| firstName | `user.firstName` |
| lastName |  `user.lastName` |
| internalId | ID interne ou `user.email` (l'ID de l'utilisateur dans votre système de gestion des identités) (facultatif) |
| groups | Représente le rôle et les privilèges administrateur de l'utilisateur dans OpenReplay ; selon votre fournisseur d'identité, il peut s'agir de `user.role` ou `group`, etc. (facultatif, par défaut = `member` sans privilège administrateur). Pour simplifier la gestion des rôles OpenReplay du côté de l'IdP, vous pouvez créer un groupe appelé OpenReplay-admin où vous placez les utilisateurs disposant de privilèges administrateur, et un groupe appelé OpenReplay-member où vous placez les utilisateurs ayant le rôle 'member' |

Vous devriez maintenant disposer de toutes les valeurs requises pour l'étape/la section suivante.

## Configuration SSO (SAML2)

Si vous utilisez notre plan Cloud dedicated, allez dans la [Console](https://console.openreplay.com), puis cliquez sur l'instance et définissez les variables dans la section SSO.

Sinon, si vous exécutez notre Enterprise Edition, lancez `openreplay -e`, décommentez puis mettez à jour les variables d'environnement ci-dessous dans la section `chalice` :

| Variable | Description |
|----------|-------------|
| idp_entityId | L'`entityId` de votre fournisseur d'identité, également appelé `Issuer URL` |
| idp_sso_url | Le `singleSignOnService` de votre fournisseur d'identité, également appelé `SAML 2.0 Endpoint (HTTP)` |
| idp_x509cert | Le `x509cert`, doit être une chaîne sur une seule ligne, sans sauts de ligne. Vous pouvez utiliser <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">cet outil</a> pour formater votre valeur |
| idp_name | Le nom du fournisseur d'identité (facultatif) |
| idp_sls_url | Le `singleLogoutService` de votre fournisseur d'identité, également appelé `SLO Endpoint (HTTP)` (facultatif) |
| enforce_SSO | Si défini sur `true`, toutes les connexions avec nom d'utilisateur et mot de passe seront bloquées (facultatif, par défaut=`false`) |

Ensuite, enregistrez et quittez avec `:wq` pour que les modifications prennent effet :

## Certificat OpenReplay

Ceci est facultatif ; vous pouvez ajouter un certificat x509 pour une sécurité SSO supplémentaire :

1. exécutez cette commande sur votre serveur ou votre machine sécurisée (vous pouvez modifier la durée de validité de votre certificat selon vos besoins) :
```bash
openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout openreplay-sso.key -out openreplay-sso.crt
```
2. Sur votre serveur, exécutez `openreplay -e`
3. Dans la section `chalice`, ajoutez les variables d'environnement suivantes :
- **sp_crt** : doit être une chaîne sur une seule ligne, sans sauts de ligne, du fichier 'openreplay-sso.crt' généré (vous pouvez utiliser <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">cet outil</a> pour formater votre valeur)
- **sp_key** : doit être une chaîne sur une seule ligne, sans sauts de ligne, du fichier 'openreplay-sso.key' généré
4. Enregistrez et quittez avec `:wq` pour que les modifications prennent effet
5. Ajoutez le fichier 'openreplay-sso.crt' généré à la configuration de l'application de votre fournisseur d'identité

## Exemple avec Okta

1. Connectez-vous à votre tableau de bord d'administration Okta et allez dans 'Applications' > 'Applications'
2. Appuyez sur 'Create new app integration', puis sélectionnez SAML 2.0 et appuyez sur 'Next'
3. Définissez le 'App Name' sur OpenReplay (vous pouvez téléverser cette <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">icône</a>) pour votre application) puis appuyez sur 'Next'
4. Définissez :
 - **Single sign on URL** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Audience URI (SP Entity ID)** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** sur `EmailAddress`
5. Définissez les champs ci-dessous dans 'Attribute Statements' :
 - **tenantKey** : format `Basic` et définissez la valeur sur <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, que vous trouverez dans le dashboard OpenReplay sous 'Preferences' > 'Account' (cet attribut ne doit pas être ajouté si vous utilisez notre plan Cloud Dedicated)
 - **firstName** : format `Basic` et définissez la valeur sur `user.firstName`
 - **lastName** : format `Basic` et définissez la valeur sur `user.lastName`
 - **internalId** : format `Basic` et définissez la valeur sur `user.email`
6. Définissez le champ ci-dessous dans 'Group Attribute Statement' :
 - **groups** : format `Basic`, filtre `Match Regex`, valeur `OpenReplay-*` (ou vous pouvez spécifier un filtre et une expression régulière différents selon vos besoins)
7. Appuyez sur Next, sélectionnez 'I'm an Okta customer adding an internal app' et 'This is an internal app that we have created' puis appuyez sur 'Finish'
8. Dans l'onglet Sign On, faites défiler vers le bas et appuyez sur 'View Setup Instructions' pour voir votre configuration SAML2

Si vous utilisez notre plan Cloud dedicated, allez dans la [Console](https://console.openreplay.com), puis cliquez sur l'instance et définissez les variables dans la section SSO.

Sinon, si vous exécutez notre Enterprise Edition :

9.  Connectez-vous en SSH à votre installation OpenReplay et exécutez `openreplay -e`
10.  Dans la section `chalice`, décommentez puis définissez les variables d'environnement suivantes :
   - **idp_entityId** : Identity Provider Issuer
   - **idp_sso_url** : Identity Provider Single Sign-On URL
   - **idp_x509cert** : Certificat X.509, doit être une chaîne sur une seule ligne, sans sauts de ligne (vous pouvez utiliser <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">cet outil</a> pour formater votre valeur)
   - **idp_name** : Okta
11.  Enfin, enregistrez et quittez avec `:wq` pour que les modifications prennent effet

## Exemple avec Azure Active Directory

1. Connectez-vous à votre portail Azure et allez dans 'Azure Active Directory'
2. Appuyez sur '+ Add', sélectionnez 'Enterprise application' puis cliquez sur 'Create your own application'
3. Définissez le 'App Name' sur OpenReplay puis sélectionnez 'Integrate any other application you don't find in the gallery (Non-gallery)' et appuyez sur 'Create'
4. Naviguez vers 'Single sign-on' dans le menu de gauche et définissez les valeurs ci-dessous dans le bloc 'Basic SAML Configuration' :
 - **Identifier (Entity ID)** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Reply URL (Assertion Consumer Service URL)** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
 - **Logout URL** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/sls/</code>
5. Ajoutez les claims ci-dessous dans le bloc 'Attribute & Claims' et assurez-vous de laisser le champ 'Namespace' vide pour chacun d'eux :
 - **tenantKey** : définissez la valeur sur <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, que vous trouverez dans le dashboard OpenReplay sous 'Preferences' > 'Account' (cet attribut/claim ne doit pas être ajouté si vous utilisez notre plan Cloud Dedicated)
 - **firstName** : définissez la valeur sur `user.givenname`
 - **lastName** : définissez la valeur sur `user.surname`
 - **internalId** : définissez la valeur sur `user.mail`
6. Naviguez vers 'Users and groups' et attribuez les utilisateurs que vous sélectionnez à l'application

Si vous utilisez notre plan Cloud dedicated, allez dans la [Console](https://console.openreplay.com), puis cliquez sur l'instance et définissez les variables dans la section SSO (les valeurs se trouvent dans 'Azure Active Directory' > 'OpenReplay' > 'Single sign-on').

Sinon, si vous exécutez notre Enterprise Edition :

7. Connectez-vous en SSH à votre installation OpenReplay et exécutez `openreplay -e`
8. Dans la section `chalice`, décommentez puis définissez les variables d'environnement suivantes (les valeurs se trouvent dans 'Azure Active Directory' > 'OpenReplay' > 'Single sign-on') :
- **idp_entityId** : Azure AD Identifier
- **idp_sso_url** : Login URL
- **idp_sls_url** : Logout URL
- **idp_x509cert** : Certificat X.509, doit être une chaîne sur une seule ligne, sans sauts de ligne (vous pouvez utiliser <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">cet outil</a> pour formater votre valeur)
- **idp_name** : Active Directory
9.  Enfin, enregistrez et quittez avec `:wq` pour que les modifications prennent effet

## Exemple avec Google Workspace (anciennement G Suite)

#### Ajouter des attributs personnalisés :

1. Dans la console d'administration Google, allez dans 'Directory' > 'Users' > 'More options' > 'Manage custom attributes'.
2. Cliquez sur 'Add Custom Attribute'.
3. Définissez les champs suivants :
 - **Category** : 'OpenReplay'
 - **Custom fields** :
- **Name** : 'role'
- **Info type** : 'Text'
- **Visibility** : 'Visible to user and admin'
- **No. of values** : 'Single-value'
 - **Custom fields** :
- **Name** : 'adminPrivileges'
- **Info type** : 'Yes or No'
- **Visibility** : 'Visible to user and admin'
- **No. of values** : 'Single-value'
4. Cliquez sur 'Add'
5. Pour ajouter des valeurs aux nouveaux attributs personnalisés, allez dans 'Users'
6. Sélectionnez le ou les utilisateurs souhaités
7. Cliquez sur 'User information' puis modifiez la section 'OpenReplay'
8. Changez la valeur de **role** vers le rôle souhaité dans 'OpenReplay' (le rôle doit correspondre à celui créé dans le dashboard OpenReplay sous 'Preferences' > 'Roles')
9. Changez la valeur de **adminPrivileges** sur 'Yes' si l'utilisateur est autorisé à disposer de privilèges administrateur dans OpenReplay
10. Cliquez sur 'Save'

#### Configuration :

1. Connectez-vous à votre console d'administration Google et allez dans 'Apps'
2. Appuyez sur 'Web and mobile apps' puis cliquez sur 'Add app' > 'Add custom SAML app'
3. Définissez le 'App name' sur OpenReplay (vous pouvez téléverser cette <a href="https://docs.openreplay.com/static/OpenReplay.png" target="_blank">icône</a> pour 'App icon'') puis appuyez sur 'Continue'
4. Copiez 'SSO URL', 'Entity ID' et 'Certificate' puis cliquez sur 'Continue' (nous utiliserons ces valeurs à l'étape 11)
5. Définissez :
 - **ACS URL** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/>/</code> (<code>{initialValues.tenantKey}</code> se trouve dans le dashboard OpenReplay sous 'Preferences' > 'Account', mais si vous utilisez notre plan Cloud Dedicated, laissez la valeur de tenantKey vide)
 - **Entity ID** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
 - **Name ID format** sur `Email`
 - **Name ID** sur `Basic information > Primary Email`
6. Cliquez sur 'Continue' puis appuyez sur 'Add Mapping' pour ajouter les attributs ci-dessous :
 - `Basic information > First Name` -> **firstName**
 - `Basic information > Last Name` -> **lastName**
 - `Basic information > Primary Email` -> **internalId**
 - `OpenReplay > groups` -> **groups**
7. Cliquez sur 'Finish'
8.  Dans la console d'administration Google, allez dans 'Apps' > 'Web and mobile apps' et sélectionnez 'OpenReplay'
9.  Cliquez sur 'User access', sélectionnez 'ON for everyone' puis appuyez sur 'Save'

Si vous utilisez notre plan Cloud dedicated, allez dans la [Console](https://console.openreplay.com), puis cliquez sur l'instance et définissez les variables dans la section SSO.

Sinon, si vous exécutez notre Enterprise Edition :

10. Connectez-vous en SSH à votre installation OpenReplay et exécutez `openreplay -e`
11. Dans la section `chalice > env`, décommentez et définissez les attributs suivants en utilisant les valeurs de l'étape 4 :
   - **idp_sso_url** : collez la valeur de 'SSO URL'
   - **idp_entityId** : collez la valeur de 'Entity ID'
   - **idp_x509cert** : utilisez <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">cet outil</a> pour formater le certificat copié/téléchargé
   - **idp_name** : définissez la valeur sur `G-Suite`
   - **idp_tenantKey** : <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> que vous trouverez dans le dashboard OpenReplay sous 'Preferences' > 'Account'
12. Enfin, enregistrez et quittez avec `:wq` pour que les modifications prennent effet

## Exemple avec JumpCloud

1. Connectez-vous à votre tableau de bord d'administration JumpCloud et, dans le menu de gauche, allez dans 'SSO'
2. Appuyez sur '+ Add New Application', puis sélectionnez 'Custom SAML App'
3. Définissez le 'Display Label' sur OpenReplay (vous pouvez téléverser cette <a href="https://docs.openreplay.com/static/OpenReplay150x150.png" target="_blank">icône</a> pour votre application) puis passez à l'onglet 'SSO'
4. Définissez :
- **IdP Entity ID** sur <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> (<code>{initialValues.tenantKey}</code> se trouve dans le dashboard OpenReplay sous 'Preferences' > 'Account', mais si vous utilisez notre plan Cloud Dedicated, laissez la valeur de tenantKey vide)
- **SP Entity ID** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/metadata/</code>
- **ACS URL** sur <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/>/api/sso/saml2/acs/</code>
- **SAMLSubject NameID** sur `email`
- **SAMLSubject NameID Format:** sur `urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress`
- **Signature Algorithm** sur `RSA-SHA256`
- Cochez **Sign Assertion**
- **IDP URL** pour qu'elle se termine par <code>openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> (cette valeur ne peut pas être modifiée ultérieurement ; si vous utilisez notre plan Cloud Dedicated, laissez la partie tenantKey vide)
5. Si vous avez suivi les instructions <a href="#openreplay-certificate">OpenReplay-Certificate</a>, vous pouvez téléverser le fichier 'openreplay-sso.crt' généré en appuyant sur 'Upload SP Certificate' ; sinon, ignorez cette étape
6. Définissez les champs ci-dessous dans 'USER ATTRIBUTE MAPPING' en appuyant sur le bouton 'add attribute' :
- **firstName** : définissez la valeur sur `firstname`
- **lastName** : définissez la valeur sur `lastname`
- **internalId** : définissez la valeur sur `email`
- **groups** : facultatif, le rôle et les privilèges administrateur de l'utilisateur dans OpenReplay ; s'il s'agit d'une valeur constante pour tous les utilisateurs, vous devriez le définir à l'étape suivante, sinon vous devez ajouter un nouvel attribut de type chaîne au groupe JumpCloud, l'appeler `OpenReplay-groups` et définir la valeur sur le nom du rôle, puis, dans la configuration SSO, sélectionner 'Custom User or Group Attribute' et définir la valeur sur `OpenReplay-groups`.
7. Définissez les champs ci-dessous dans 'CONSTANT ATTRIBUTES' en appuyant sur le bouton 'add attribute' :
- **tenantKey** : définissez la valeur sur <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>, que vous trouverez dans le dashboard OpenReplay sous 'Preferences' > 'Account' (cet attribut ne doit pas être ajouté si vous utilisez notre plan Cloud Dedicated)
- **groups** : facultatif, ignorez-le s'il a été défini à l'étape précédente, le rôle et les privilèges administrateur de l'utilisateur dans OpenReplay, doit correspondre à un nom de rôle déjà défini dans OpenReplay (par défaut = `member` sans privilège administrateur)
8. À ce stade, vous pouvez passer à l'onglet 'User Groups' et sélectionner le groupe d'utilisateurs qui auront accès à OpenReplay, ou vous pouvez le faire plus tard
9. Appuyez sur 'activate' et 'continue' dans la fenêtre contextuelle de confirmation
10. Appuyez sur l'icône de la nouvelle application OpenReplay, puis dans le menu déroulant de gauche 'IDP Certificate Valid' choisissez 'Download certificate'

Si vous utilisez notre plan Cloud dedicated, allez dans la [Console](https://console.openreplay.com), puis cliquez sur l'instance et définissez les variables dans la section SSO.

Sinon, si vous exécutez notre Enterprise Edition :

11. Connectez-vous en SSH à votre installation OpenReplay et exécutez `openreplay -e`
12. Dans la section `chalice`, décommentez puis définissez les variables d'environnement suivantes :
- **idp_entityId** : <code>openreplay/<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_sso_url** : <code>{ignoreValues.jumpcloud}/saml2/openreplay-<ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>
- **idp_x509cert** : le certificat téléchargé, doit être une chaîne sur une seule ligne, sans sauts de ligne (vous pouvez utiliser <a href="https://www.samltool.com/format_x509cert.php" title="FORMAT A X509 CERTIFICATE" target="_blank">cet outil</a> pour formater votre valeur)
- **idp_name** : JumpCloud
13.  Enfin, enregistrez et quittez avec `:wq` pour que les modifications prennent effet

## Provisionnement SCIM (System for Cross-domain Identity Management)

Openreplay prend en charge l'option de provisionner les identités des utilisateurs dans l'Enterprise Edition.

Pour vous intégrer au service SCIM d'Openreplay, il suffit d'activer le provisionnement SCIM dans le tableau de bord de votre fournisseur d'identité. Veillez à définir les valeurs suivantes pour une intégration sans accroc :

| Variable | Description |
|----------|-------------|
| SCIM connector base URL | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/ |
| User unique identifier field name | `email` |
| Support provisioning actions | Push new users, Push profile updates, Push groups |
| Authentication mode | OAuth2 |
| Access token endpoint | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/token/ |
| Authorization endpoint | <code><ORDynamicCode id="domain" initialValue={initialValues.domain} client:idle/></code>/api/sso/scim/v2/authorize/ |
| Client id | <code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code> sa valeur se trouve dans le Dashboard, sous 'Preferences' > 'Account' |
| Client secret | Sa valeur peut être obtenue en exécutant cette requête dans votre base de données Postgres : <code>SELECT tenant_secret FROM tenants WHERE tenant_key = '<code><ORDynamicCode id="tenantKey" initialValue={initialValues.tenantKey} client:idle/></code>';</code> |

Après avoir défini ces valeurs, suivez les invites du tableau de bord de votre fournisseur d'identité afin de tester l'intégration et d'autoriser l'application.

{/*
Openreplay requires custom attributes to be used in order to properly setup users and groups with valid projects and permissions. You will need to add the following attributes in your Identity Provider dashboard:
- `projectKeys`. This attribute if of type `string array` and added to the user schema, though it will be controlled by the group resource. You will find all of the possible values of this attribute in the 'Projects' page of Openreplay's application.
- `permissions`. This attribute if of type `string array` and added to the user schema, though it will be controlled by the group resource. The possible values of this attribute are listed below:
- SESSION_REPLAY
- DEV_TOOLS
- METRICS
- ASSIST_LIVE
- ASSIST_CALL
- SPOT
- SPOT_PUBLIC
*/}

Après cela, vous pourrez provisionner les identités des utilisateurs en utilisant Openreplay comme fournisseur de services SCIM.

> **Remarque :** Bien qu'Openreplay agisse en tant que fournisseur de services SCIM, il ne prend pas en charge la répartition des utilisateurs dans plusieurs groupes (c.-à-d. que chaque utilisateur ne peut appartenir qu'à un seul groupe). Si cela n'est pas respecté, un utilisateur pourrait être affecté à moins ou plus de projets que prévu et pourrait disposer de moins ou plus de permissions dans l'application d'Openreplay.

### Exemple avec Okta

Dans votre application SAML 2.0, procédez comme suit

#### Ajouter le provisionnement SCIM

1. Cliquez sur l'onglet **General**
2. Dans la section **App Settings**, cliquez sur **Edit**
3. Dans le champ **Provisioning**, sélectionnez **SCIM**, puis cliquez sur **Save**

#### Choisir les options de provisionnement

1. Cliquez sur l'onglet **Provisioning**. Les paramètres de connexion SCIM apparaissent sous **Settings > Integration**.
2. Dans **Settings > Integration**, cliquez sur **Edit**.
3. Spécifiez la **SCIM connector base URL** et le nom du champ de l'identifiant unique de vos utilisateurs mentionné ci-dessus.
4. Sous **Supported provisioning actions**, choisissez les actions de provisionnement mentionnées ci-dessus.
5. Définissez le menu déroulant **Authentication Mode** sur la valeur mentionnée ci-dessus.
6. Définissez **Access token endpoint**, **Authorization endpoint**, **Client id** et **Client secret** comme mentionné ci-dessus.
7. Cliquez sur **Save**.
8. Cliquez sur **Authentiate application**.
9. Dans l'onglet **Provisioning**, cliquez sur **To App**.
10. Cliquez sur **Edit**, activez `Create Users`, `Update User Attributes`, `Deactivate Users` et enregistrez les modifications.
- Avant de commencer l'étape suivante, nous recommandons de créer de nouveaux groupes dans Okta, appelés `OpenReplay-admin` où vous listez les utilisateurs ayant des privilèges administrateur dans OpenReplay, et `OpenReplay-members` où vous listez les utilisateurs ayant le rôle `member` dans OpenReplay, ...    
11. Allez dans l'onglet **Push Groups**, cliquez sur **+ Push Groups** (par nom ou par règle), sélectionnez le groupe que vous souhaitez envoyer à OpenReplay, et appuyez sur **save**
- À ce stade, les groupes envoyés représentent des rôles et des privilèges administrateur dans OpenReplay, et ne contiennent pas la liste des utilisateurs provisionnés pour OpenReplay.
12. Allez dans l'onglet **Assignmets** et ajoutez des utilisateurs de la manière qui vous convient (en utilisant des personnes ou des groupes)

{/*
#### Add extra attributes

You will need to add the attributes mentioned above.

1. Click the **Provisioning** tab.
2. In **Settings > To App**, scroll down and click **Add attribute**.

For `projectKeys`, use the following.

| Variable | Description |
|----------|-------------|
| Data type | string array |
| Variable name | projectKeys |
| External name | projectKeys |
| External namespace | urn:ietf:params:scim:schemas:extension:openreplay:2.0:User |
| Enum | checked |
| Attribute members | Use the values of the project names for the **Display name** and project keys as the **Value**. You will find these in the 'Projects' page of Openreplay's application |
| Attribute type | Group |
| Group priority | Use group priority |

For `permissions`, use the following.

| Variable | Description |
|----------|-------------|
| Data type | string array |
| Variable name | permissions |
| External name | permissions |
| External namespace | urn:ietf:params:scim:schemas:extension:openreplay:2.0:User |
| Enum | checked |
| Attribute members | Use the values outlined above for the **Display name** and **Value** |
| Attribute type | Group |
| Group priority | Use group priority |
*/}
## Erreurs

### La réponse a été reçue en http au lieu de https

Ceci est très courant et est dû à l'absence de l'en-tête 'X-Forwarded-Proto' dans la requête. Pour résoudre ce problème, assurez-vous que le répartiteur de charge transmet correctement l'en-tête au backend OpenReplay, et exécutez `openreplay -e` ; dans la section `ingress-nginx > config`, décommentez la ligne `use-forwarded-headers: true`.
